# Spacecraft-Intelligent-Capability-Sustainable-Architecture

./: CMakeLists.txt  README.en.md  README.md  global.c  global.h  main  main.c  main.h  util.c  util.h  windowsUtil.c  windowsUtil.h
onboardControlServices/: DataInjection.cpp  README.md  commandParsing.c  commandParsing.h  dataInjection .c  dataInjection .h  dataInjection.c  dataInjection.h  eventTable.c  eventTable.h  instructionParse.cpp  macroInstruction.c  macroInstruction.h  onlineMonitoring.c  onlineMonitoring.h
test/: testConsole.c  testConsole.h  testMacro.c  testMacro.h
